--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/georemo/testNodeCDCI/issues"
   },
-  "homepage": "https://github.com/georemo/testNodeCDCI#readme"
+  "homepage": "https://github.com/georemo/testNodeCDCI#readme",
+  "devDependencies": {
+    "jest":"28.1.3"
+  }
 }
